parser/src/parser.output
Terminals unused in grammar

   T_EXCLAMATION
   T_TILDE


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: ALL_DECLEARARION
    3        | PROGRAM ALL_DECLEARARION

    4 ALL_DECLEARARION: DECLARATION
    5                 | FUNCTION

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8         | DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT

   10 COMPOUND_STATEMENT: T_LCURLYBRACKET T_RCURLYBRACKET
   11                   | T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   12                   | T_LCURLYBRACKET STATEMENT_LIST T_RCURLYBRACKET
   13                   | T_LCURLYBRACKET DECLARATION_LIST STATEMENT_LIST T_RCURLYBRACKET

   14 STATEMENT_LIST: STATEMENT
   15               | STATEMENT_LIST STATEMENT

   16 STATEMENT: COMPOUND_STATEMENT
   17          | IF_STATEMENT
   18          | JUMP_STATEMENT
   19          | ITERATION_STATEMENT

   20 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   21                    | T_DO STATEMENT T_WHILE T_LBRACKET EXPRESSION T_RBRACKET T_SIMICOLOUMN
   22                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   23                    | T_FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   24 EXPRESSION_STATEMENT: T_SIMICOLOUMN
   25                     | EXPRESSION T_SIMICOLOUMN

   26 IF_STATEMENT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   27             | T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT T_ELSE STATEMENT

   28 JUMP_STATEMENT: T_RETURN T_SIMICOLOUMN
   29               | T_RETURN EXPRESSION T_SIMICOLOUMN
   30               | T_GOTO T_VARIABLE T_SIMICOLOUMN
   31               | T_BREAK T_SIMICOLOUMN
   32               | T_CONTINUE T_SIMICOLOUMN

   33 EXPRESSION: INITIALIZER
   34           | T_LBRACKET ASSIGNMENT_EXPRESSION T_RBRACKET
   35           | T_ELLIPSIS

   36 DECLARATION_LIST: DECLARATION
   37                 | DECLARATION_LIST DECLARATION

   38 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS DECLARATOR
   39                       | DECLARATION_SPECIFIERS DECLARATOR T_COMMA PARAM_DECLARATION_LIST
   40                       | DECLARATION_SPECIFIERS

   41 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN
   42            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN
   43            | RE_DECLARATION

   44 RE_DECLARATION: INIT_DECLARATOR_LIST T_SIMICOLOUMN

   45 DECLARATION_SPECIFIERS: TYPE_SPECIFIER
   46                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
   47                       | STORAGE_CLASS_SPECIFIER
   48                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS

   49 STORAGE_CLASS_SPECIFIER: T_TYPEDEF
   50                        | T_EXTERN
   51                        | T_STATIC
   52                        | T_AUTO
   53                        | T_REGISTER

   54 INIT_DECLARATOR_LIST: INIT_DECLARATOR

   55 INIT_DECLARATOR: DECLARATOR
   56                | DECLARATOR ASSIGNMENT_OPERATOR INITIALIZER
   57                | T_INC_OP INITIALIZER
   58                | T_DEC_OP INITIALIZER
   59                | DIRECT_DECLARATOR T_INC_OP
   60                | DIRECT_DECLARATOR T_DEC_OP
   61                | DIRECT_DECLARATOR T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
   62                | DIRECT_DECLARATOR T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET STATEMENT
   63                | DIRECT_DECLARATOR T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
   64                | DIRECT_DECLARATOR T_DOT T_VARIABLE
   65                | DIRECT_DECLARATOR T_PTR_OP T_VARIABLE

   66 DECLARATOR: POINTER DIRECT_DECLARATOR
   67           | DIRECT_DECLARATOR

   68 POINTER: T_STAR
   69        | T_STAR POINTER
   70        | T_STAR TYPE_QUALIFIER
   71        | T_STAR TYPE_QUALIFIER POINTER

   72 TYPE_QUALIFIER: T_CONST
   73               | T_VOLATILE

   74 DIRECT_DECLARATOR: T_VARIABLE

   75 TYPE_SPECIFIER: T_INT
   76               | T_VOID
   77               | T_CHAR
   78               | T_LONG
   79               | T_FLOAT
   80               | T_DOUBLE
   81               | T_SIGNED
   82               | T_UNSIGNED
   83               | STRUCT_UNION

   84 STRUCT_UNION: struct_or_union T_VARIABLE T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   85             | struct_or_union T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   86             | struct_or_union T_VARIABLE

   87 struct_or_union: T_STRUCT
   88                | T_UNION

   89 INITIALIZER: ASSIGNMENT_EXPRESSION

   90 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   91                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   92 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   93                       | LOGICAL_OR_EXPRESSION T_QUESTIONMARK EXPRESSION T_COLOUMN CONDITIONAL_EXPRESSION

   94 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   95                      | LOGICAL_AND_EXPRESSION T_OR_OP INCLUSIVE_OR_EXPRESSION

   96 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   97                       | LOGICAL_AND_EXPRESSION T_AND_OP INCLUSIVE_OR_EXPRESSION

   98 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   99                        | INCLUSIVE_OR_EXPRESSION T_INEXCLUS_OR EXCLUSIVE_OR_EXPRESSION

  100 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
  101                        | EXCLUSIVE_OR_EXPRESSION T_EXCLUS_OR AND_EXPRESSION

  102 AND_EXPRESSION: EQUALITY_EXPRESSION
  103               | AND_EXPRESSION T_AMPERSAND EQUALITY_EXPRESSION

  104 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
  105                    | EQUALITY_EXPRESSION T_EQ_OP RELATIONAL_EXPRESSION
  106                    | EQUALITY_EXPRESSION T_NE_OP RELATIONAL_EXPRESSION

  107 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
  108                      | RELATIONAL_EXPRESSION '>' SHIFT_EXPRESSION
  109                      | RELATIONAL_EXPRESSION '<' SHIFT_EXPRESSION
  110                      | RELATIONAL_EXPRESSION T_LE_OP SHIFT_EXPRESSION
  111                      | RELATIONAL_EXPRESSION T_GE_OP SHIFT_EXPRESSION

  112 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
  113                 | SHIFT_EXPRESSION T_LEFT_OP ADDITIVE_EXPRESSION
  114                 | SHIFT_EXPRESSION T_RIGHT_OP ADDITIVE_EXPRESSION

  115 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
  116                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
  117                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

  118 MULTIPLICATIVE_EXPRESSION: UNARY_EXPRESSION
  119                          | MULTIPLICATIVE_EXPRESSION T_STAR UNARY_EXPRESSION
  120                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE UNARY_EXPRESSION
  121                          | MULTIPLICATIVE_EXPRESSION T_MOD UNARY_EXPRESSION

  122 UNARY_EXPRESSION: POSTFIX_EXPRESSION
  123                 | OPERATOR UNARY_EXPRESSION
  124                 | T_INC_OP UNARY_EXPRESSION
  125                 | T_DEC_OP UNARY_EXPRESSION
  126                 | T_SIZEOF UNARY_EXPRESSION

  127 OPERATOR: T_MINUS
  128         | T_PLUS
  129         | T_STAR
  130         | T_DIVIDE
  131         | T_MOD
  132         | T_EQUAL

  133 ASSIGNMENT_OPERATOR: T_EQUAL
  134                    | T_MUL_ASSIGN
  135                    | T_DIV_ASSIGN
  136                    | T_MOD_ASSIGN
  137                    | T_ADD_ASSIGN
  138                    | T_SUB_ASSIGN
  139                    | T_LEFT_ASSIGN
  140                    | T_RIGHT_ASSIGN
  141                    | T_AND_ASSIGN
  142                    | T_XOR_ASSIGN
  143                    | T_OR_ASSIGN

  144 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
  145                   | POSTFIX_EXPRESSION T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
  146                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
  147                   | POSTFIX_EXPRESSION T_DOT T_VARIABLE
  148                   | POSTFIX_EXPRESSION T_PTR_OP T_VARIABLE
  149                   | POSTFIX_EXPRESSION T_INC_OP
  150                   | POSTFIX_EXPRESSION T_DEC_OP

  151 PRIMARY_EXPRESSION: T_VARIABLE
  152                   | T_NUMBER


Terminals, with rules where they appear

$end (0) 0
'<' (60) 109
'>' (62) 108
error (256)
T_FOR (258) 22 23
T_IF (259) 26 27
T_INT (260) 75
T_RETURN (261) 28 29
T_WHILE (262) 20 21
T_NUMBER (263) 152
T_VARIABLE (264) 30 64 65 74 84 86 147 148 151
T_ELLIPSIS (265) 35
T_RIGHT_ASSIGN (266) 140
T_LEFT_ASSIGN (267) 139
T_ADD_ASSIGN (268) 137
T_SUB_ASSIGN (269) 138
T_MUL_ASSIGN (270) 134
T_DIV_ASSIGN (271) 135
T_MOD_ASSIGN (272) 136
T_AND_ASSIGN (273) 141
T_XOR_ASSIGN (274) 142
T_OR_ASSIGN (275) 143
T_RIGHT_OP (276) 114
T_LEFT_OP (277) 113
T_INC_OP (278) 57 59 124 149
T_DEC_OP (279) 58 60 125 150
T_PTR_OP (280) 65 148
T_AND_OP (281) 97
T_OR_OP (282) 95
T_LE_OP (283) 110
T_GE_OP (284) 111
T_EQ_OP (285) 105
T_NE_OP (286) 106
T_INEXCLUS_OR (287) 99
T_EXCLUS_OR (288) 101
T_SIMICOLOUMN (289) 21 24 25 28 29 30 31 32 41 42 44
T_LCURLYBRACKET (290) 10 11 12 13 84 85
T_RCURLYBRACKET (291) 10 11 12 13 84 85
T_COMMA (292) 39
T_COLOUMN (293) 93
T_EQUAL (294) 132 133
T_LBRACKET (295) 6 7 8 9 20 21 22 23 26 27 34 146
T_RBRACKET (296) 6 7 8 9 20 21 22 23 26 27 34 146
T_LSQUAREBRACKET (297) 61 62 63 145
T_RSQUAREBRACKET (298) 61 62 63 145
T_DOT (299) 64 147
T_AMPERSAND (300) 103
T_EXCLAMATION (301)
T_TILDE (302)
T_MINUS (303) 117 127
T_PLUS (304) 116 128
T_STAR (305) 68 69 70 71 119 129
T_DIVIDE (306) 120 130
T_MOD (307) 121 131
T_QUESTIONMARK (308) 93
T_GOTO (309) 30
T_BREAK (310) 31
T_CONTINUE (311) 32
T_DO (312) 21
T_SIZEOF (313) 126
T_CONST (314) 72
T_VOLATILE (315) 73
T_VOID (316) 76
T_CHAR (317) 77
T_LONG (318) 78
T_SIGNED (319) 81
T_UNSIGNED (320) 82
T_FLOAT (321) 79
T_DOUBLE (322) 80
T_STRUCT (323) 87
T_UNION (324) 88
T_TYPEDEF (325) 49
T_AUTO (326) 52
T_REGISTER (327) 53
T_EXTERN (328) 50
T_STATIC (329) 51
"then" (330)
T_ELSE (331) 27


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
ROOT (80)
    on left: 1, on right: 0
PROGRAM (81)
    on left: 2 3, on right: 1 3
ALL_DECLEARARION (82)
    on left: 4 5, on right: 2 3
FUNCTION (83)
    on left: 6 7 8 9, on right: 5
COMPOUND_STATEMENT (84)
    on left: 10 11 12 13, on right: 6 7 8 9 16
STATEMENT_LIST (85)
    on left: 14 15, on right: 12 13 15
STATEMENT (86)
    on left: 16 17 18 19, on right: 14 15 20 21 22 23 26 27 62
ITERATION_STATEMENT (87)
    on left: 20 21 22 23, on right: 19
EXPRESSION_STATEMENT (88)
    on left: 24 25, on right: 22 23
IF_STATEMENT (89)
    on left: 26 27, on right: 17
JUMP_STATEMENT (90)
    on left: 28 29 30 31 32, on right: 18
EXPRESSION (91)
    on left: 33 34 35, on right: 20 21 23 25 26 27 29 61 62 63 93 145
DECLARATION_LIST (92)
    on left: 36 37, on right: 11 13 37 84 85
PARAM_DECLARATION_LIST (93)
    on left: 38 39 40, on right: 6 8 39
DECLARATION (94)
    on left: 41 42 43, on right: 4 36 37
RE_DECLARATION (95)
    on left: 44, on right: 43
DECLARATION_SPECIFIERS (96)
    on left: 45 46 47 48, on right: 6 7 38 39 40 41 42 46 48
STORAGE_CLASS_SPECIFIER (97)
    on left: 49 50 51 52 53, on right: 47 48
INIT_DECLARATOR_LIST (98)
    on left: 54, on right: 42 44
INIT_DECLARATOR (99)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 54
DECLARATOR (100)
    on left: 66 67, on right: 6 7 8 9 38 39 55 56
POINTER (101)
    on left: 68 69 70 71, on right: 66 69 71
TYPE_QUALIFIER (102)
    on left: 72 73, on right: 70 71
DIRECT_DECLARATOR (103)
    on left: 74, on right: 59 60 61 62 63 64 65 66 67
TYPE_SPECIFIER (104)
    on left: 75 76 77 78 79 80 81 82 83, on right: 45 46
STRUCT_UNION (105)
    on left: 84 85 86, on right: 83
struct_or_union (106)
    on left: 87 88, on right: 84 85 86
INITIALIZER (107)
    on left: 89, on right: 33 56 57 58
ASSIGNMENT_EXPRESSION (108)
    on left: 90 91, on right: 34 89 91
CONDITIONAL_EXPRESSION (109)
    on left: 92 93, on right: 90 93
LOGICAL_OR_EXPRESSION (110)
    on left: 94 95, on right: 92 93
LOGICAL_AND_EXPRESSION (111)
    on left: 96 97, on right: 94 95 97
INCLUSIVE_OR_EXPRESSION (112)
    on left: 98 99, on right: 95 96 97 99
EXCLUSIVE_OR_EXPRESSION (113)
    on left: 100 101, on right: 98 99 101
AND_EXPRESSION (114)
    on left: 102 103, on right: 100 101 103
EQUALITY_EXPRESSION (115)
    on left: 104 105 106, on right: 102 103 105 106
RELATIONAL_EXPRESSION (116)
    on left: 107 108 109 110 111, on right: 104 105 106 108 109 110
    111
SHIFT_EXPRESSION (117)
    on left: 112 113 114, on right: 107 108 109 110 111 113 114
ADDITIVE_EXPRESSION (118)
    on left: 115 116 117, on right: 112 113 114 116 117
MULTIPLICATIVE_EXPRESSION (119)
    on left: 118 119 120 121, on right: 115 116 117 119 120 121
UNARY_EXPRESSION (120)
    on left: 122 123 124 125 126, on right: 91 118 119 120 121 123
    124 125 126
OPERATOR (121)
    on left: 127 128 129 130 131 132, on right: 123
ASSIGNMENT_OPERATOR (122)
    on left: 133 134 135 136 137 138 139 140 141 142 143, on right:
    56 91
POSTFIX_EXPRESSION (123)
    on left: 144 145 146 147 148 149 150, on right: 122 145 146 147
    148 149 150
PRIMARY_EXPRESSION (124)
    on left: 151 152, on right: 144


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_INC_OP    shift, and go to state 3
    T_DEC_OP    shift, and go to state 4
    T_STAR      shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_LONG      shift, and go to state 8
    T_SIGNED    shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_STRUCT    shift, and go to state 13
    T_UNION     shift, and go to state 14
    T_TYPEDEF   shift, and go to state 15
    T_AUTO      shift, and go to state 16
    T_REGISTER  shift, and go to state 17
    T_EXTERN    shift, and go to state 18
    T_STATIC    shift, and go to state 19

    ROOT                     go to state 20
    PROGRAM                  go to state 21
    ALL_DECLEARARION         go to state 22
    FUNCTION                 go to state 23
    DECLARATION              go to state 24
    RE_DECLARATION           go to state 25
    DECLARATION_SPECIFIERS   go to state 26
    STORAGE_CLASS_SPECIFIER  go to state 27
    INIT_DECLARATOR_LIST     go to state 28
    INIT_DECLARATOR          go to state 29
    DECLARATOR               go to state 30
    POINTER                  go to state 31
    DIRECT_DECLARATOR        go to state 32
    TYPE_SPECIFIER           go to state 33
    STRUCT_UNION             go to state 34
    struct_or_union          go to state 35


State 1

   75 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 75 (TYPE_SPECIFIER)


State 2

   74 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 74 (DIRECT_DECLARATOR)


State 3

   57 INIT_DECLARATOR: T_INC_OP . INITIALIZER

    T_NUMBER    shift, and go to state 36
    T_VARIABLE  shift, and go to state 37
    T_INC_OP    shift, and go to state 38
    T_DEC_OP    shift, and go to state 39
    T_EQUAL     shift, and go to state 40
    T_MINUS     shift, and go to state 41
    T_PLUS      shift, and go to state 42
    T_STAR      shift, and go to state 43
    T_DIVIDE    shift, and go to state 44
    T_MOD       shift, and go to state 45
    T_SIZEOF    shift, and go to state 46

    INITIALIZER                go to state 47
    ASSIGNMENT_EXPRESSION      go to state 48
    CONDITIONAL_EXPRESSION     go to state 49
    LOGICAL_OR_EXPRESSION      go to state 50
    LOGICAL_AND_EXPRESSION     go to state 51
    INCLUSIVE_OR_EXPRESSION    go to state 52
    EXCLUSIVE_OR_EXPRESSION    go to state 53
    AND_EXPRESSION             go to state 54
    EQUALITY_EXPRESSION        go to state 55
    RELATIONAL_EXPRESSION      go to state 56
    SHIFT_EXPRESSION           go to state 57
    ADDITIVE_EXPRESSION        go to state 58
    MULTIPLICATIVE_EXPRESSION  go to state 59
    UNARY_EXPRESSION           go to state 60
    OPERATOR                   go to state 61
    POSTFIX_EXPRESSION         go to state 62
    PRIMARY_EXPRESSION         go to state 63


State 4

   58 INIT_DECLARATOR: T_DEC_OP . INITIALIZER

    T_NUMBER    shift, and go to state 36
    T_VARIABLE  shift, and go to state 37
    T_INC_OP    shift, and go to state 38
    T_DEC_OP    shift, and go to state 39
    T_EQUAL     shift, and go to state 40
    T_MINUS     shift, and go to state 41
    T_PLUS      shift, and go to state 42
    T_STAR      shift, and go to state 43
    T_DIVIDE    shift, and go to state 44
    T_MOD       shift, and go to state 45
    T_SIZEOF    shift, and go to state 46

    INITIALIZER                go to state 64
    ASSIGNMENT_EXPRESSION      go to state 48
    CONDITIONAL_EXPRESSION     go to state 49
    LOGICAL_OR_EXPRESSION      go to state 50
    LOGICAL_AND_EXPRESSION     go to state 51
    INCLUSIVE_OR_EXPRESSION    go to state 52
    EXCLUSIVE_OR_EXPRESSION    go to state 53
    AND_EXPRESSION             go to state 54
    EQUALITY_EXPRESSION        go to state 55
    RELATIONAL_EXPRESSION      go to state 56
    SHIFT_EXPRESSION           go to state 57
    ADDITIVE_EXPRESSION        go to state 58
    MULTIPLICATIVE_EXPRESSION  go to state 59
    UNARY_EXPRESSION           go to state 60
    OPERATOR                   go to state 61
    POSTFIX_EXPRESSION         go to state 62
    PRIMARY_EXPRESSION         go to state 63


State 5

   68 POINTER: T_STAR .
   69        | T_STAR . POINTER
   70        | T_STAR . TYPE_QUALIFIER
   71        | T_STAR . TYPE_QUALIFIER POINTER

    T_STAR      shift, and go to state 5
    T_CONST     shift, and go to state 65
    T_VOLATILE  shift, and go to state 66

    $default  reduce using rule 68 (POINTER)

    POINTER         go to state 67
    TYPE_QUALIFIER  go to state 68


State 6

   76 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 76 (TYPE_SPECIFIER)


State 7

   77 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 77 (TYPE_SPECIFIER)


State 8

   78 TYPE_SPECIFIER: T_LONG .

    $default  reduce using rule 78 (TYPE_SPECIFIER)


State 9

   81 TYPE_SPECIFIER: T_SIGNED .

    $default  reduce using rule 81 (TYPE_SPECIFIER)


State 10

   82 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 82 (TYPE_SPECIFIER)


State 11

   79 TYPE_SPECIFIER: T_FLOAT .

    $default  reduce using rule 79 (TYPE_SPECIFIER)


State 12

   80 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 80 (TYPE_SPECIFIER)


State 13

   87 struct_or_union: T_STRUCT .

    $default  reduce using rule 87 (struct_or_union)


State 14

   88 struct_or_union: T_UNION .

    $default  reduce using rule 88 (struct_or_union)


State 15

   49 STORAGE_CLASS_SPECIFIER: T_TYPEDEF .

    $default  reduce using rule 49 (STORAGE_CLASS_SPECIFIER)


State 16

   52 STORAGE_CLASS_SPECIFIER: T_AUTO .

    $default  reduce using rule 52 (STORAGE_CLASS_SPECIFIER)


State 17

   53 STORAGE_CLASS_SPECIFIER: T_REGISTER .

    $default  reduce using rule 53 (STORAGE_CLASS_SPECIFIER)


State 18

   50 STORAGE_CLASS_SPECIFIER: T_EXTERN .

    $default  reduce using rule 50 (STORAGE_CLASS_SPECIFIER)


State 19

   51 STORAGE_CLASS_SPECIFIER: T_STATIC .

    $default  reduce using rule 51 (STORAGE_CLASS_SPECIFIER)


State 20

    0 $accept: ROOT . $end

    $end  shift, and go to state 69


State 21

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . ALL_DECLEARARION

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_INC_OP    shift, and go to state 3
    T_DEC_OP    shift, and go to state 4
    T_STAR      shift, and go to state 5
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_LONG      shift, and go to state 8
    T_SIGNED    shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_STRUCT    shift, and go to state 13
    T_UNION     shift, and go to state 14
    T_TYPEDEF   shift, and go to state 15
    T_AUTO      shift, and go to state 16
    T_REGISTER  shift, and go to state 17
    T_EXTERN    shift, and go to state 18
    T_STATIC    shift, and go to state 19

    $default  reduce using rule 1 (ROOT)

    ALL_DECLEARARION         go to state 70
    FUNCTION                 go to state 23
    DECLARATION              go to state 24
    RE_DECLARATION           go to state 25
    DECLARATION_SPECIFIERS   go to state 26
    STORAGE_CLASS_SPECIFIER  go to state 27
    INIT_DECLARATOR_LIST     go to state 28
    INIT_DECLARATOR          go to state 29
    DECLARATOR               go to state 30
    POINTER                  go to state 31
    DIRECT_DECLARATOR        go to state 32
    TYPE_SPECIFIER           go to state 33
    STRUCT_UNION             go to state 34
    struct_or_union          go to state 35


State 22

    2 PROGRAM: ALL_DECLEARARION .

    $default  reduce using rule 2 (PROGRAM)


State 23

    5 ALL_DECLEARARION: FUNCTION .

    $default  reduce using rule 5 (ALL_DECLEARARION)


State 24

    4 ALL_DECLEARARION: DECLARATION .

    $default  reduce using rule 4 (ALL_DECLEARARION)


State 25

   43 DECLARATION: RE_DECLARATION .

    $default  reduce using rule 43 (DECLARATION)


State 26

    6 FUNCTION: DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   41 DECLARATION: DECLARATION_SPECIFIERS . T_SIMICOLOUMN
   42            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SIMICOLOUMN

    T_VARIABLE     shift, and go to state 2
    T_INC_OP       shift, and go to state 3
    T_DEC_OP       shift, and go to state 4
    T_SIMICOLOUMN  shift, and go to state 71
    T_STAR         shift, and go to state 5

    INIT_DECLARATOR_LIST  go to state 72
    INIT_DECLARATOR       go to state 29
    DECLARATOR            go to state 73
    POINTER               go to state 31
    DIRECT_DECLARATOR     go to state 32


State 27

   47 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER .
   48                       | STORAGE_CLASS_SPECIFIER . DECLARATION_SPECIFIERS

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_LONG      shift, and go to state 8
    T_SIGNED    shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_STRUCT    shift, and go to state 13
    T_UNION     shift, and go to state 14
    T_TYPEDEF   shift, and go to state 15
    T_AUTO      shift, and go to state 16
    T_REGISTER  shift, and go to state 17
    T_EXTERN    shift, and go to state 18
    T_STATIC    shift, and go to state 19

    $default  reduce using rule 47 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS   go to state 74
    STORAGE_CLASS_SPECIFIER  go to state 27
    TYPE_SPECIFIER           go to state 33
    STRUCT_UNION             go to state 34
    struct_or_union          go to state 35


State 28

   44 RE_DECLARATION: INIT_DECLARATOR_LIST . T_SIMICOLOUMN

    T_SIMICOLOUMN  shift, and go to state 75


State 29

   54 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 54 (INIT_DECLARATOR_LIST)


State 30

    8 FUNCTION: DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   55 INIT_DECLARATOR: DECLARATOR .
   56                | DECLARATOR . ASSIGNMENT_OPERATOR INITIALIZER

    T_RIGHT_ASSIGN  shift, and go to state 76
    T_LEFT_ASSIGN   shift, and go to state 77
    T_ADD_ASSIGN    shift, and go to state 78
    T_SUB_ASSIGN    shift, and go to state 79
    T_MUL_ASSIGN    shift, and go to state 80
    T_DIV_ASSIGN    shift, and go to state 81
    T_MOD_ASSIGN    shift, and go to state 82
    T_AND_ASSIGN    shift, and go to state 83
    T_XOR_ASSIGN    shift, and go to state 84
    T_OR_ASSIGN     shift, and go to state 85
    T_EQUAL         shift, and go to state 86
    T_LBRACKET      shift, and go to state 87

    $default  reduce using rule 55 (INIT_DECLARATOR)

    ASSIGNMENT_OPERATOR  go to state 88


State 31

   66 DECLARATOR: POINTER . DIRECT_DECLARATOR

    T_VARIABLE  shift, and go to state 2

    DIRECT_DECLARATOR  go to state 89


State 32

   59 INIT_DECLARATOR: DIRECT_DECLARATOR . T_INC_OP
   60                | DIRECT_DECLARATOR . T_DEC_OP
   61                | DIRECT_DECLARATOR . T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
   62                | DIRECT_DECLARATOR . T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET STATEMENT
   63                | DIRECT_DECLARATOR . T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET T_LSQUAREBRACKET EXPRESSION T_RSQUAREBRACKET
   64                | DIRECT_DECLARATOR . T_DOT T_VARIABLE
   65                | DIRECT_DECLARATOR . T_PTR_OP T_VARIABLE
   67 DECLARATOR: DIRECT_DECLARATOR .

    T_INC_OP          shift, and go to state 90
    T_DEC_OP          shift, and go to state 91
    T_PTR_OP          shift, and go to state 92
    T_LSQUAREBRACKET  shift, and go to state 93
    T_DOT             shift, and go to state 94

    $default  reduce using rule 67 (DECLARATOR)


State 33

   45 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   46                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 6
    T_CHAR      shift, and go to state 7
    T_LONG      shift, and go to state 8
    T_SIGNED    shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_FLOAT     shift, and go to state 11
    T_DOUBLE    shift, and go to state 12
    T_STRUCT    shift, and go to state 13
    T_UNION     shift, and go to state 14
    T_TYPEDEF   shift, and go to state 15
    T_AUTO      shift, and go to state 16
    T_REGISTER  shift, and go to state 17
    T_EXTERN    shift, and go to state 18
    T_STATIC    shift, and go to state 19

    $default  reduce using rule 45 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS   go to state 95
    STORAGE_CLASS_SPECIFIER  go to state 27
    TYPE_SPECIFIER           go to state 33
    STRUCT_UNION             go to state 34
    struct_or_union          go to state 35


State 34

   83 TYPE_SPECIFIER: STRUCT_UNION .

    $default  reduce using rule 83 (TYPE_SPECIFIER)


State 35

   84 STRUCT_UNION: struct_or_union . T_VARIABLE T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   85             | struct_or_union . T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   86             | struct_or_union . T_VARIABLE

    T_VARIABLE       shift, and go to state 96
    T_LCURLYBRACKET  shift, and go to state 97


State 36

  152 PRIMARY_EXPRESSION: T_NUMBER .

    $default  reduce using rule 152 (PRIMARY_EXPRESSION)


State 37

  151 PRIMARY_EXPRESSION: T_VARIABLE .

    $default  reduce using rule 151 (PRIMARY_EXPRESSION)


State 38

  124 UNARY_EXPRESSION: T_INC_OP . UNARY_EXPRESSION
